Fix site title going behind the cornen in some cases.
Use site header cloned element width instead of the original to get
accurate width of the header content area's content.
(fix #50)

--- a/sources/stylesheets/components/_site-header.scss
+++ b/sources/stylesheets/components/_site-header.scss
@@ -88,3 +88,10 @@
     }
   }
 }
+
+.header-title-clone {
+  position: absolute;
+  visibility: hidden;
+  bottom: 0;
+  left: 0;
+}
